gitops/clusters/homelab/infra/longhorn/test-longhorn-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lh-test-pod
  namespace: default
spec:
  containers:
    - name: test
      image: debian:bookworm-slim
      command:
        - sh
        - -c
        - |
          while true; do
            echo "ok $(date -u)" >> /data/test.txt
            sleep 60
          done
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: lh-test
